--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 <section class="bg-pink-400">
   <div class="max-w-7xl mx-auto px-4 py-10 grid md:grid-cols-2 gap-10 items-center">
     <!-- Text -->
-    <div class="bg-white p-8 rounded-3xl shadow-lg shadow-white hover:shadow-xl hover:shadow-black text-center md:text-left">
+    <div class="bg-white p-8 rounded-3xl shadow-lg shadow-green hover:shadow-xl hover:shadow-black text-center md:text-left">
       <p class="uppercase font-semibold text-pink-500">Podcast</p>
       <h2 class="text-3xl md:text-4xl font-bold mt-2">
         Listen Anywhere, Anytime effortlessly
