Updated my code

--- a/index2.html
+++ b/index2.html
@@ -177,6 +177,22 @@
    <iframe width="361" height="642" src="https://www.youtube.com/embed/410iTOnalBI" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </section>
+ <h1 class="text-pink-400 bg-black  text-center text-6xl my-10 ">TOUCHING LYRICS</h1>
+<div>
+    <h1 class="text-black  text-center text-4xl ">MOST WANTED</h1>
+    <p class="text-pink-500  font-serif  text-center text-2xl">"CAN'T TOUCH ME I FEEL ANNOINTED"</p>
+     <h1 class="text-black  text-center text-4xl">GIFTED</h1>
+    <p class="text-pink-500 font-serif  text-center text-2xl">"BUH WHY YOU CHOOSE ME INNO CON KNOW,CUS SINCE WHEN I DEY HERE INNO WAN GO,GIMME YOUR GRACE INNO WAN SOAP,INNO WAN JONZE,ENJOYMENT INNO WAN KURO<br>
+    CAN'T GIVE UP,WONT GIVE UP AM A YOUNG SOLDIER,CAN'T LOOK AT ALL THE HATE KOGBADURA LODA,STILL RUNNING WITH ALL THE WEIGHT WEY DEY ON MY SHOULDER,AM A YOUNG SOLDIER."</p>
+     <h1 class="text-black  text-center text-4xl">LIFESTYLE</h1>
+    <p class="text-pink-500 font-serif  text-center text-2xl">"ALL THIS PEOPLE WAN MAKE I REST,BUH IF I GREE FOR THEM MAKE I BEND"</p>
+     <h1 class="text-black  text-center text-4xl">MANY THINGS</h1>
+    <p class="text-pink-500 font-serif text-center text-2xl">LIFE GO TEACH YOU PASS PROFESSOR ON THE ROAD,SO NO ASK ME WHERE I LEARN FROM</p>
+     <h1 class="text-black  text-center text-4xl">MOST WANTED</h1>
+    <p class="text-pink-500  font-serif text-center text-2xl">HUNTER FIT TO BE THE HUNTED</p>
+   
 
+
+</div>
 </body>
 </html>
